# rust-job-tracker

./: Cargo.toml  README.md
src/: cli.rs  db.rs  main.rs  model.rs  store.rs
tests/: cli_smoke.rs
